# EFSC_calib

./: README.md
efsc_ros_calib/: CMakeLists.txt  package.xml
efsc_ros_calib/cfg/: calib.cfg  calib.yaml  camera_info.yaml
efsc_ros_calib/include/: calib_node.hpp
efsc_ros_calib/include/ef_calib/: ParamCalib.hpp  param.hpp
efsc_ros_calib/include/ef_calib/calib/: CameraBase.hpp  EventCalib.hpp  EventFramePair.hpp  EventFramePairMap.hpp  LineFitting.hpp  PoseCalib_g2o.hpp
efsc_ros_calib/include/ef_calib/dbscan/: KDTreeVectorOfVectorsAdaptor.h
efsc_ros_calib/include/ef_calib/dbscan/__Previews/: KDTreeVectorOfVectorsAdaptor.hPreview
efsc_ros_calib/include/ef_calib/picker/: Config.hpp  EventPicker.hpp  EventSlice.hpp  EventSliceMap.hpp  ImageSlice.hpp  MotionCompensate.hpp  PairSlice.hpp
efsc_ros_calib/include/tools/: camerainfo.hpp  param.hpp  tools.hpp
efsc_ros_calib/launch/: EFSC_calib.launch
efsc_ros_calib/launch/rqt/: previews_debug.perspective
efsc_ros_calib/launch/rviz/: calib_node.rviz
efsc_ros_calib/src/: calib_node.cpp
efsc_ros_calib/src/ef_calib/calib/: EventCalib.cpp  PoseCalib_g2o.cpp
efsc_ros_calib/src/ef_calib/dbscan/: kdtree.cpp
efsc_ros_calib/src/ef_calib/picker/: EventPicker.cpp  EventSlice.cpp  ImageSlice.cpp
efsc_ros_calib/src/subtask/: EventImageWithMotion.cpp  TwoViewRecover.cpp  task.cpp
efsc_ros_calib/src/tools/: tools.cpp
pic/: description
