<?xml version="1.0"?>
<package format="2">
  <name>efsc_ros_calib</name>
  <version>1.0.0</version>
  <description>Nodes for event-frame dynamic calibration library.</description>

  <maintainer email="rayhu1007@gmail.com">BIT</maintainer>

  <license>Apache2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>dv_ros_msgs</build_depend>
  <build_depend>dv_ros_messaging</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>pcl_ros</build_depend>
  

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>dv_ros_msgs</exec_depend>
  <exec_depend>dv_ros_messaging</exec_depend>
  <exec_depend>pcl_ros</exec_depend>  

</package>
